--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "devDependencies": {
     "@jest/reporters": "^29.5.0",
     "@jest/types": "^29.5.0",
+    "@playwright/test": "^1.30.1",
     "@types/jest": "^29.5.1",
     "@types/luxon": "^3.3.0",
+    "@types/node": "^20.11.16",
     "@types/uuid": "^9.0.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4",
-    "@playwright/test": "^1.30.1"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "jest": "24.x - 29.x",
