--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@agoda-com/test-metrics",
   "description": "Library to collect test metrics",
   "version": "0.0.21",
+  "repository": "https://github.com/agoda-com/testresults-collector.git",
   "main": "jest/index.js",
   "playwright": "playwright/index.js",
+  "vitest": "vitest/index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -22,22 +24,26 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vitest": "^0.33.0"
   },
   "peerDependencies": {
     "jest": "24.x - 29.x",
     "jest-junit": "14.x - 16.x",
-    "typescript": "^3.7.x || ^4.3.x || ^5.x"
+    "typescript": "^3.7.x || ^4.3.x || ^5.x",
+    "vitest": "^0.0.0"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "luxon": "^3.3.0",
+    "safely-try": "^0.4.3",
     "tslib": "^2.5.3",
     "uuid": "^9.0.0"
   },
   "files": [
     "common",
     "jest",
-    "playwright"
+    "playwright",
+    "vitest"
   ]
 }
