--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "vitest": "vitest/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.json",
     "test": "jest",
     "test:ci": "jest --config ./jest.config.js",
     "prepublishOnly": "yarn build"
